crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_json_get_str_results.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+---------+
| name    |
+---------+
| alice   |
| bob     |
| charlie |
+---------+
