crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_json_length_explain.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+---------------+--------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                 |
+---------------+--------------------------------------------------------------------------------------+
| logical_plan  | Projection: tag_count                                                                |
|               |   Sort: json_test.id ASC NULLS LAST                                                  |
|               |     Projection: json_length(json_test.data, Utf8("tags")) AS tag_count, json_test.id |
|               |       TableScan: json_test projection=[id, data]                                     |
| physical_plan | ProjectionExec: expr=[tag_count@0 as tag_count]                                      |
|               |   SortPreservingMergeExec: [id@1 ASC NULLS LAST]                                     |
|               |     SortExec: expr=[id@1 ASC NULLS LAST], preserve_partitioning=[true]               |
|               |       ProjectionExec: expr=[json_length(data@1, tags) as tag_count, id@0 as id]      |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1         |
|               |           SchemaCastScanExec                                                         |
|               |             CooperativeExec                                                          |
|               |               BytesProcessedExec                                                     |
|               |                 DuckSqlExec sql= SELECT "id", "data" FROM json_test                  |
|               |                                                                                      |
+---------------+--------------------------------------------------------------------------------------+
