crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_json_length_results.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+-----------+
| tag_count |
+-----------+
| 2         |
| 1         |
| 3         |
+-----------+
