crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_regexp_count_explain.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                 |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                            |
|               |  Projection: regexp_count(csv_test.region, Utf8("AMERICA"))                                                                                                          |
|               |   TableScan: csv_test projection=[region]                                                                                                                            |
| physical_plan | SchemaCastScanExec                                                                                                                                                   |
|               |   CooperativeExec                                                                                                                                                    |
|               |     BytesProcessedExec                                                                                                                                               |
|               |       VirtualExecutionPlan name=duckdb compute_context=:memory: base_sql=SELECT coalesce(len(regexp_extract_all("csv_test"."region", 'AMERICA')), 0) FROM "csv_test" |
|               |                                                                                                                                                                      |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
