crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_regexp_count_results.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+-----------------------------------------------+
| regexp_count(csv_test.region,Utf8("AMERICA")) |
+-----------------------------------------------+
| 0                                             |
| 1                                             |
| 1                                             |
| 0                                             |
| 0                                             |
| 0                                             |
+-----------------------------------------------+
