crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_regexp_like_is_case_sensitive_explain.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
snapshot_kind: text
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                        |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                                   |
|               |  Projection: csv_test.region                                                                                                                                                |
|               |   TableScan: csv_test projection=[region], full_filters=[regexp_like(csv_test.region, Utf8("america"))]                                                                     |
| physical_plan | SchemaCastScanExec                                                                                                                                                          |
|               |   CooperativeExec                                                                                                                                                           |
|               |     BytesProcessedExec                                                                                                                                                      |
|               |       VirtualExecutionPlan name=duckdb compute_context=:memory: initial_sql=SELECT "csv_test"."region" FROM "csv_test" WHERE regexp_matches("csv_test"."region", 'america') |
|               |                                                                                                                                                                             |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------+