crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_regexp_like_with_case_insensitive_flag_explain.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+---------------+-----------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                  |
+---------------+-----------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: csv_test.region ILIKE Utf8("%america%")                                                                       |
|               |   Federated                                                                                                           |
|               |  Projection: csv_test.region                                                                                          |
|               |   TableScan: csv_test projection=[region]                                                                             |
| physical_plan | FilterExec: region@0 ILIKE %america%                                                                                  |
|               |   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                |
|               |     SchemaCastScanExec                                                                                                |
|               |       BytesProcessedExec                                                                                              |
|               |         VirtualExecutionPlan name=duckdb compute_context=:memory: base_sql=SELECT "csv_test"."region" FROM "csv_test" |
|               |                                                                                                                       |
+---------------+-----------------------------------------------------------------------------------------------------------------------+
