crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_regexp_like_with_case_insensitive_flag_results.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+---------------+
| region        |
+---------------+
| NORTH AMERICA |
| SOUTH AMERICA |
+---------------+
