crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_regexp_match_explain.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+---------------+-----------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                  |
+---------------+-----------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: regexp_match(csv_test.region, Utf8("AMERICA"))                                                            |
|               |   Federated                                                                                                           |
|               |  Projection: csv_test.region                                                                                          |
|               |   TableScan: csv_test projection=[region]                                                                             |
| physical_plan | ProjectionExec: expr=[regexp_match(region@0, AMERICA) as regexp_match(csv_test.region,Utf8("AMERICA"))]               |
|               |   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                |
|               |     SchemaCastScanExec                                                                                                |
|               |       BytesProcessedExec                                                                                              |
|               |         VirtualExecutionPlan name=duckdb compute_context=:memory: base_sql=SELECT "csv_test"."region" FROM "csv_test" |
|               |                                                                                                                       |
+---------------+-----------------------------------------------------------------------------------------------------------------------+
