crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_regexp_match_results.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+-----------------------------------------------+
| regexp_match(csv_test.region,Utf8("AMERICA")) |
+-----------------------------------------------+
|                                               |
| [AMERICA]                                     |
| [AMERICA]                                     |
|                                               |
|                                               |
|                                               |
+-----------------------------------------------+
