crates/runtime/tests/duckdb/snapshots/integration__duckdb__test_regexp_replace_case_insensitive_explain.snap
---
source: crates/runtime/tests/duckdb/mod.rs
expression: pretty
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                  |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: regexp_replace(csv_test.region, Utf8("america"), Utf8("australia"), Utf8("i"))                                                            |
|               |   Federated                                                                                                                                           |
|               |  Projection: csv_test.region                                                                                                                          |
|               |   TableScan: csv_test projection=[region]                                                                                                             |
| physical_plan | ProjectionExec: expr=[regexp_replace(region@0, america, australia, i) as regexp_replace(csv_test.region,Utf8("america"),Utf8("australia"),Utf8("i"))] |
|               |   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                |
|               |     SchemaCastScanExec                                                                                                                                |
|               |       BytesProcessedExec                                                                                                                              |
|               |         VirtualExecutionPlan name=duckdb compute_context=:memory: base_sql=SELECT "csv_test"."region" FROM "csv_test"                                 |
|               |                                                                                                                                                       |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------+
